--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -13,7 +13,11 @@
     <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li class="active"><%= link_to "Authors", "#" %></li>
-        <% unless user_signed_in?%>
+        <%if user_signed_in?%>
+          <li>
+            <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+          </li>
+        <%else%>
         <li>
           <%= link_to "Sign Up", new_user_registration_path%>
         </li>
@@ -26,9 +30,7 @@
           Signed in as <%="#{current_user.email}"%>
         </p>
         <%end%>
-        <li>
-          <%= link_to "Signout", destroy_user_session_path, method: :delete%>
-        </li>
+
       </ul>
     </div>
   </div>
