Link articles to user

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <%render 'shared/header'%>
-  <%render 'shared/main'%>
+  <%=render 'shared/header'%>
+  <%=render 'shared/main'%>
 </body>
 </html>
